--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#contact</h1>
-<p>Find me in app/views/home/contact.html.erb</p>
+<h1>Contact Info</h1>
+<p>If you have any questions feel free to contact me anytime.</p>
+<ul>
+  <li>Email: studiojannmarie@gmail.com</li>
+  <li>Phone Number: (805) 341-0562</li>
+</ul>
