--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <div class="container">
      <ul class="nav nav-tabs">
        <li><%= link_to "Home", home_index_path %></li>
-       <li><%= link_to "About", home_about_path %></li>
-       <li><%= link_to "Contact", home_contact_path %></li>
+       <li><%= link_to "About", about_path %></li>
+       <li><%= link_to "Contact", contact_path %></li>
      </ul>
 
      <%= yield %>
