created delete spec for user_profile

--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -106,5 +106,9 @@
   <div class="form-group">
    <%= @user_profile.shipping %>
   </div>
+  <div class="col-md-4">
+    <%= link_to "Edit", edit_user_profile_path(@user_profile), class: 'btn btn-success' %>
+    <%= link_to "Delete Wedding Profile", @user_profile, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wedding profile?'} %>
+  </div>
 <% end %>
 </div>
