--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,16 @@
        <li><%= link_to "Home", home_index_path %></li>
        <li><%= link_to "About", about_path %></li>
        <li><%= link_to "Contact", contact_path %></li>
-     </ul>
+    <div class="pull-right user-info">
+     <% if user_signed_in? %>
+       Signed in as: <strong><%= current_user.email %></strong> |
+       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+     <% else %>
+       <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+       <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+     <% end %>
+    </div>
+    </ul>
      <% if flash[:notice] %>
         <div class="alert alert-success">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
