--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
        <li><%= link_to "Contact", contact_path %></li>
     <div class="pull-right user-info">
      <% if user_signed_in? %>
-       Signed in as: <strong><%= current_user.email %></strong> |
+       Signed in as: <strong><%= current_user.username %></strong> |
        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
      <% else %>
        <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
