Added Sendgrid and Figaro for email confirmation

--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -4,8 +4,8 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <p><%= f.label :username %><br />
-    <%= f.text_field :username, autofocus true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %></p>
+    <%= f.label :username %>
+    <%= f.text_field :username, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
   </div>
 
   <div class="actions">
