Updated login and signup buttons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Jann Marie Bridal</h1>
-<p>Welcome, and I look forward to working with you!</p>
+<h1>Welcome to Jann Marie Bridal</h1>
+<p>I look forward to working with you!</p>
