--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
 
+<div class="jumbotron">
   <% if current_user %>
   <h1>Jann Marie Bridal</h1>
   <p>
+    <%= link_to "Create Profile", new_user_profile_path, class: 'btn btn-primary' %> or
     <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'btn btn-danger', data: {confirm: 'Are you sure you want to sign out?'} %>
   <% else %>
   <h1>Welcome to Jann Marie Bridal</h1>
@@ -10,3 +12,17 @@
   </h3>
   </p>
   <% end %>
+  </div>
+  <div class="row">
+   <div class="col-md-4">
+     <h2>Your custom dress</h2>
+     <p>Bloccit will deliver food and water to those in need, all over the world.</p>
+   </div>
+   <div class="col-md-4">
+     <h2>Feel & look how you want</h2>
+     <p>Bloccit will deliver money and education to those in need, all over the world.</p>
+   </div>
+   <div class="col-md-4">
+     <h2>Let's have fun doing it</h2>
+     <p>Bloccit will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
+   </div>
