--- a/app/views/user_profiles/edit.html.erb
+++ b/app/views/user_profiles/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit Wedding Profile</h1>
+<div class="jumbotron">
+<h1>Edit Profile</h1>
+</div>
 
 <div class="col-md-8">
 <%= render partial: 'form', locals: { user_profile: @user_profile } %>
