--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,114 +1,142 @@
-<h1>Wedding Profile</h1>
+<div class="jumbotron">
+<h1>Custom Dress Profile</h1>
+</div>
 
 <div class="col-md-8">
 <%= form_for @user_profile do |f| %>
 <h2>Contact Info</h2>
   <div class="form-group">
+    <%= f.label :first_name %>:
    <%= @user_profile.first_name %>
   </div>
 
   <div class="form-group">
+   <%= f.label :last_name %>:
    <%= @user_profile.last_name %>
   </div>
 
   <div class="form-group">
+   <%= f.label :email %>:
    <%= @user_profile.email %>
   </div>
 
   <div class="form-group">
+   <%= f.label :phone_number %>:
    <%= @user_profile.phone_number %>
   </div>
 
   <div class="form-group">
+   <%= f.label :shipping_address %>:
    <%= @user_profile.shipping_address %>
   </div>
 <h2>Important Dates</h2>
   <div class="form-group">
+   <%= f.label :wedding_date %>:
    <%= @user_profile.wedding_date %>
   </div>
 
   <div class="form-group">
+   <%= f.label :bridals_date %>:
    <%= @user_profile.bridals_date %>
   </div>
 <h2>Measurements</h2>
   <div class="form-group">
+   <%= f.label :height %>:
    <%= @user_profile.height %>
   </div>
 
   <div class="form-group">
+   <%= f.label :over_bust %>:
    <%= @user_profile.over_bust %>
   </div>
 
   <div class="form-group">
-   <%= @user_profile.bust %>
+    <%= f.label :bust %>:
+    <%= @user_profile.bust %>
   </div>
 
   <div class="form-group">
-   <%= @user_profile.under_bust %>
+    <%= f.label :under_bust %>:
+    <%= @user_profile.under_bust %>
   </div>
 
   <div class="form-group">
-   <%= @user_profile.braw_size %>
+    <%= f.label :braw_size %>:
+    <%= @user_profile.braw_size %>
   </div>
 
   <div class="form-group">
-   <%= @user_profile.waist %>
+    <%= f.label :waist %>:
+    <%= @user_profile.waist %>
   </div>
 
   <div class="form-group">
+   <%= f.label :hip %>:
    <%= @user_profile.hip %>
   </div>
 
   <div class="form-group">
+   <%= f.label :natural_waist %>:
    <%= @user_profile.natural_waist %>
   </div>
 
   <div class="form-group">
+   <%= f.label :shoulder_to_shoulder %>:
    <%= @user_profile.shoulder_to_shoulder %>
   </div>
 
   <div class="form-group">
+   <%= f.label :shoulder_to_waist %>:
    <%= @user_profile.shoulder_to_waist %>
   </div>
 
   <div class="form-group">
+   <%= f.label :waist_to_floor %>:
    <%= @user_profile.waist_to_floor %>
   </div>
 
   <div class="form-group">
+   <%= f.label :rise %>:
    <%= @user_profile.rise %>
   </div>
 <h2>Sleeves (if applicable)</h2>
   <div class="form-group">
+   <%= f.label :sleeve_length %>:
    <%= @user_profile.sleeve_length %>
   </div>
 
   <div class="form-group">
+   <%= f.label :arm_hole %>:
    <%= @user_profile.arm_hole %>
   </div>
 
   <div class="form-group">
+   <%= f.label :bicep %>:
    <%= @user_profile.bicep %>
   </div>
 
   <div class="form-group">
+   <%= f.label :forearm %>:
    <%= @user_profile.forearm %>
   </div>
 <h2>Payment Status</h2>
   <div class="form-group">
+   <%= f.label :deposit %>:
    <%= @user_profile.deposit %>
   </div>
 
   <div class="form-group">
-   <%= @user_profile.paid_in_full %>
+   <%= f.label :paid_in_full %>:
+  <%= @user_profile.paid_in_full %>
   </div>
 
   <div class="form-group">
+   <%= f.label :shipping %>:
    <%= @user_profile.shipping %>
   </div>
   <div class="col-md-4">
     <%= link_to "Edit", edit_user_profile_path(@user_profile), class: 'btn btn-success' %>
-    <%= link_to "Delete Wedding Profile", @user_profile, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wedding profile?'} %>
+    <%= link_to "Delete Profile", @user_profile, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete your profile?'} %>
   </div>
 <% end %>
 </div>
