--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
        <li><%= link_to "About", about_path %></li>
        <li><%= link_to "Contact", contact_path %></li>
     <div class="pull-right user-info">
+       Signed in as: <strong><%= current_user.username %></strong><br>
      <% if user_signed_in? %>
-       <!-- <%= link_to 'My Wedding Profile', user_profile %> -->
-       Signed in as: <strong><%= current_user.username %></strong> |
+       <%= link_to 'My Profile', user_profile_path(:id => current_user.id) %><br>
        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
      <% else %>
