--- a/app/views/user_profiles/new.html.erb
+++ b/app/views/user_profiles/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Wedding Profile</h1>
+<div class="jumbotron">
+<h1>Create Csutom Dress Profile</h1>
+</div>
 
 <div class="col-md-8">
   <%= render partial: 'form', locals: { user_profile: @user_profile } %>
