--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,13 @@
      <ul class="nav nav-tabs">
        <li><%= link_to "Home", home_index_path %></li>
        <li><%= link_to "About", about_path %></li>
+       <% if current_user && current_user.admin? %>
+        <li><%= link_to "All Profiles", user_profiles_path %>
+       <% end %>
        <li><%= link_to "Contact", contact_path %></li>
     <div class="pull-right user-info">
+      <% if user_signed_in? %>
        Signed in as: <strong><%= current_user.username %></strong><br>
-     <% if user_signed_in? %>
        <%= link_to 'My Profile', user_profile_path(:id => current_user.id) %><br>
        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
