--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -105,7 +105,8 @@
      <%= f.label :forearm %>
      <%= f.text_field :forearm, class: 'form-control', placeholder: "3.5" %>
    <% end %>
-<h2>Payment Status</h2>
+<% if current_user && current_user.admin? %>
+  <h2>Payment Status</h2>
    <%= form_group_tag(user_profile.errors[:deposit]) do %>
      <%= f.label :deposit %>
      <%= f.check_box :deposit %>
@@ -118,6 +119,7 @@
      <%= f.label :shipping %>
      <%= f.check_box :shipping %>
    <% end %>
+<% end %>
   <div class="form-group">
    <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
