--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,7 @@
   <% if current_user %>
   <h1>Jann Marie Bridal</h1>
   <p>
-    <%= link_to "Create Profile", new_user_profile_path, class: 'btn btn-primary' %> or
-    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'btn btn-danger', data: {confirm: 'Are you sure you want to sign out?'} %>
+    <%= link_to "Create Profile", new_user_profile_path, class: 'btn btn-primary' %>
   <% else %>
   <h1>Welcome to Jann Marie Bridal</h1>
   <h3>Please <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
