--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -4,7 +4,7 @@
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <%= link_to user_profile.first_name, user_profile %>
+        <%= link_to user_profile.full_name, user_profile %>
       </h4>
     </div>
   </div>
