--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,26 +8,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-     <ul class="nav nav-tabs">
-       <li><%= link_to "Home", home_index_path %></li>
-       <li><%= link_to "About", about_path %></li>
+  <div class="container user-info">
+     <div class="nav nav-tabs">
+       <%= link_to "Home", home_index_path %> |
+       <%= link_to "About", about_path %> |
        <% if current_user && current_user.admin? %>
-        <li><%= link_to "All Profiles", user_profiles_path %>
+        <%= link_to "All Profiles", user_profiles_path %> |
        <% end %>
-       <li><%= link_to "Contact", contact_path %></li>
-    <div class="pull-right user-info">
+       <%= link_to "Contact", contact_path %>
+    <div class="pull-right">
       <% if user_signed_in? %>
-       Signed in as: <strong><%= current_user.username %></strong><br>
-       <%= link_to 'My Profile', user_profile_path(:id => current_user.id) %><br>
-       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
+       Signed in as: <strong><%= current_user.username %></strong> |
+       <%= link_to 'My Profile', user_profile_path(:id => current_user.id) %> |
+       <%= link_to 'Edit Account', edit_user_registration_path, :class => 'navbar-link' %> |
        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
      <% else %>
-       <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+       <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> |
        <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
      <% end %>
+     </div>
     </div>
-    </ul>
      <% if flash[:notice] %>
         <div class="alert alert-success">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
