--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,5 @@
-<h1>About Jann Marie Bridal</h1>
-<p>Best damn custom dresses around!</p>
+<br>
+<div class="jumbotron">
+  <h1>About Jann Marie Bridal</h1>
+  <p>Best damn custom dresses around!</p>
+</div>
