--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,6 +1,9 @@
-<h1>Contact Info</h1>
+<br>
+<div class="jumbotron">
+  <h1>Contact Info</h1>
 <p>If you have any questions feel free to contact me anytime.</p>
 <ul>
   <li>Email: studiojannmarie@gmail.com</li>
   <li>Phone Number: (805) 341-0562</li>
 </ul>
+</div>
