--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
-
+<br>
 <div class="jumbotron">
   <div class="text-center">
-  <% if current_user %>
     <h1><%= image_tag("logos/JMBL.png", width: '400px') %></h1>
+  <% if current_user %>
     <p><br>
     <%= link_to "Create Profile", new_user_profile_path, class: 'btn btn-primary' %>
   <% else %>
-    <h1><%= image_tag("logos/JMBL.png", width: '400px') %></h1>
+  <br>
     <h3>Please <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
     <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> to create a profile
     </h3>
@@ -15,15 +15,12 @@
 </div>
 </div>
   <div class="row">
-   <div class="col-md-4">
-     <h2>Your custom dress</h2>
-     <p>Bloccit will deliver food and water to those in need, all over the world.</p>
+   <div class="col-sm-4">
+     <%= image_tag("wedding/beeded_dress.png", class: "img-rounded", width: '350px') %>
    </div>
-   <div class="col-md-4">
-     <h2>Feel & look how you want</h2>
-     <p>Bloccit will deliver money and education to those in need, all over the world.</p>
+   <div class="col-sm-4">
+     <%= image_tag("wedding/flow_dress.png", class: "img-rounded", width: '350px') %>
    </div>
-   <div class="col-md-4">
-     <h2>Let's have fun doing it</h2>
-     <p>Bloccit will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
+   <div class="col-sm-4">
+     <%= image_tag("wedding/display_dress.png", class: "img-rounded", width: '350px') %>
    </div>
