--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container user-info">
+  <div class="container-fluid"><br>
      <div class="nav nav-tabs">
-       <%= link_to "Home", home_index_path %> |
-       <%= link_to "About", about_path %> |
+       <%= link_to "Home", home_index_path, :class => 'navbar-link' %> |
+       <%= link_to "About", about_path, :class => 'navbar-link' %> |
        <% if current_user && current_user.admin? %>
-        <%= link_to "All Profiles", user_profiles_path %> |
+        <%= link_to "All Profiles", user_profiles_path, :class => 'navbar-link' %> |
        <% end %>
-       <%= link_to "Contact", contact_path %>
+       <%= link_to "Contact", contact_path, :class => 'navbar-link' %>
     <div class="pull-right">
       <% if user_signed_in? %>
        Signed in as: <strong><%= current_user.username %></strong> |
-       <%= link_to 'My Profile', user_profile_path(:id => current_user.id) %> |
+       <%= link_to 'My Profile', user_profile_path(:id => current_user.id), :class => 'navbar-link' %> |
        <%= link_to 'Edit Account', edit_user_registration_path, :class => 'navbar-link' %> |
        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
      <% else %>
@@ -45,7 +45,10 @@
         </div>
       <% end %>
      <%= yield %>
-   </div>
+   </div><br>
+<footer class="container-fluid text-center">
+  <p>Jann Marie Bridal</p>
+</footer>
 
 </body>
 </html>
